--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ project_zek-*.tar
 
 # Ignore assets that are produced by build tools.
 /priv/static/assets/
+/priv/static/uploads/
 
 # Ignore digested assets cache.
 /priv/static/cache_manifest.json
@@ -35,3 +36,4 @@ project_zek-*.tar
 npm-debug.log
 /assets/node_modules/
 
+.env
